[gd_scene load_steps=7 format=3 uid="uid://dyy7q5r35kotx"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_d432v"]
[ext_resource type="Texture2D" uid="uid://bsd3ukwgjvmde" path="res://assets/Textures/Player/player_sprite.png" id="1_e3d67"]
[ext_resource type="PackedScene" uid="uid://ccl3geom2n8dc" path="res://scenes/hurt_box.tscn" id="3_6d8e3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xg6mh"]
radius = 4.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_joggb"]
size = Vector2(12, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_oydf4"]
radius = 320.315

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_d432v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_e3d67")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_xg6mh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="walkTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_6d8e3")]
collision_mask = 2
hurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_joggb")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_oydf4")

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="HurtBox"]
